added test and fixed behavior of the finder