@@ -9,64 +9,58 @@ import java.util.stream.Stream;
 
 public class OperationsFinder extends DepthFirstAdapter {
 
-	Set<String> promoted = new HashSet<>();
-	Map<String, HashSet<String>> used = new HashMap<>();
-	private AOperationCallSubstitution currentOperation;
+	private Set<String> promoted = new HashSet<>();
+	private Map<String, HashSet<String>> used = new HashMap<>();
+	private AOperation currentOperation;
+
+	public void explore(Start node){
+		node.apply(this);
+	}
+
 
 	@Override
 	public void caseAPromotesMachineClause(APromotesMachineClause node)
 	{
-
-			List<PExpression> copy = new ArrayList<>(node.getOperationNames());
-			for(PExpression e : copy)
-			{
-				e.apply(this);
-			}
-
-
+		promoted = node.getOperationNames().stream().map(Object::toString)
+				.map(String::trim)
+				.collect(Collectors.toSet());
 	}
 
+
 	@Override
-	public void caseAOperationCallSubstitution(AOperationCallSubstitution node)
+	public void caseAOperation(AOperation node)
 	{
 		currentOperation = node;
-		inAOperationCallSubstitution(node);
+		if(node.getOperationBody() != null)
 		{
-			List<PExpression> copy = new ArrayList<>(node.getResultIdentifiers());
-			for(PExpression e : copy)
-			{
-				e.apply(this);
-			}
+			node.getOperationBody().apply(this);
 		}
-		{
-			List<TIdentifierLiteral> copy = new ArrayList<>(node.getOperation());
-			for(TIdentifierLiteral e : copy)
-			{
-				e.apply(this);
-			}
-		}
-		{
-			List<PExpression> copy = new ArrayList<>(node.getParameters());
-			for(PExpression e : copy)
-			{
-				e.apply(this);
-			}
-		}
-		outAOperationCallSubstitution(node);
 	}
 
 	@Override
-	public void caseAOperationCallExpression(AOperationCallExpression node)
+	public void caseAOpSubstitution(AOpSubstitution node)
 	{
-			List<TIdentifierLiteral> copy = new ArrayList<>(node.getOperation());
-			assert !copy.isEmpty();
-			String function = copy.get(0).getText();
-			if(used.containsKey(function)){
-				used.get(function).add(currentOperation.getOperation().get(0).getText());
-			}
-			else{
-				used.put(function, new HashSet<>(Stream.of(currentOperation.getOperation().get(0).getText()).collect(Collectors.toSet())));
-			}
+		String function = node.getName().toString().trim();
+		if(used.containsKey(function)){
+			used.get(function).add(currentOperation.getOpName().getFirst().getText());
+		}
+		else{
+			used.put(currentOperation.getOpName().getFirst().getText(), new HashSet<>(Stream.of(function).collect(Collectors.toSet())));
+		}
+	}
+
+
+
+
+
+
+
+	public Set<String> getPromoted() {
+		return promoted;
+	}
+
+	public Map<String, HashSet<String>> getUsed() {
+		return used;
 	}
 
 }
